# bunk

./: Cargo.toml  README.md
benches/: speed.rs
src/: decode.rs  encode.rs  lib.rs  serde.rs  syllables.rs
static/: README.md  entropy.txt  syllables.txt
trie_dumper/: Cargo.toml  README.md
trie_dumper/src/: main.rs
